@@ -300,6 +300,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP540
        Canon PIXMA MP550
        Canon PIXMA MP600
+       Canon PIXMA MP640
        Canon PIXMA MP800 (EXPERIMENTAL)
        Canon PIXMA MP810 (EXPERIMENTAL)
        Canon PIXMA MP950
